# minstatus

./: .gitignore  CHANGELOG.md  LICENSE  default.nix  minbar.cabal  minstatus.cabal
app/: Main.hs
